--- a/src/Header.css
+++ b/src/Header.css
@@ -28,6 +28,8 @@
 
 .header_icon{
     margin-right: 8px;
+    cursor: pointer;
+    background-color: #fafafa;
 }
 
 .header_inputButton{
@@ -40,6 +42,7 @@
 .header_icons{
     display: flex;
     align-items: center;
+
 }
 
 .header_input > input{
